zellij-utils/src/kdl/snapshots/zellij_utils__kdl__bare_config_from_default_assets_to_string.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: fake_config_stringified
---
plugins {
    about location="zellij:about"
    compact-bar location="zellij:bars" {
        role "compact-bar"
    }
    configuration location="zellij:configuration"
    context-menu location="zellij:context-menu"
    filepicker location="zellij:strider" {
        cwd "/"
    }
    plugin-manager location="zellij:plugin-manager"
    session-manager location="zellij:session-manager"
    status-bar location="zellij:bars" {
        role "status-bar"
    }
    strider location="zellij:strider"
    tab-bar location="zellij:bars" {
        role "tab-bar"
    }
    welcome-screen location="zellij:session-manager" {
        welcome_screen true
    }
}
load_plugins {
    zellij:bars {
        role "link"
    }
}
web_client {
    font "monospace"
}
context_menu clear-defaults=true {
    pane {
        item "New pane" { NewPane; }
        item "New floating pane" { NewFloatingPane; }
        separator
        item "Fullscreen" { ToggleFocusFullscreenByPaneId; }
        item "Float / Embed" { TogglePaneEmbedOrFloatingByPaneId; }
        item "Rename pane" { StartRenamePaneByPaneId; }
        item "Add to group" { TogglePaneInGroupByPaneId; }
        separator
        item "Close pane" { CloseFocusByPaneId; }
    }
    tab {
        item "New tab" { NewTab; }
        item "Rename tab" { StartRenameTabByTabId; }
        item "Move tab left" { MoveTabByTabId "left"; }
        item "Move tab right" { MoveTabByTabId "right"; }
        separator
        item "Close tab" { CloseTabById; }
    }
    bar {
        item "New pane" { NewPane; }
        item "New tab" { NewTab; }
    }
    common {
        item "Settings…" {
            LaunchOrFocusPlugin "configuration" {
                floating true
                move_to_focused_tab true
            }
        }
        item "Session manager" {
            LaunchOrFocusPlugin "session-manager" {
                floating true
                move_to_focused_tab true
            }
        }
        item "Detach" { Detach; }
    }
}
