zellij-utils/src/kdl/snapshots/zellij_utils__kdl__bare_config_from_default_assets_to_string_with_comments.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 9130
expression: fake_config_stringified
---

// Plugin aliases - can be used to change the implementation of Zellij
// changing these requires a restart to take effect
plugins {
    about location="zellij:about"
    compact-bar location="zellij:bars" {
        role "compact-bar"
    }
    configuration location="zellij:configuration"
    context-menu location="zellij:context-menu"
    filepicker location="zellij:strider" {
        cwd "/"
    }
    plugin-manager location="zellij:plugin-manager"
    prompt location="zellij:prompt"
    session-manager location="zellij:session-manager"
    status-bar location="zellij:bars" {
        role "status-bar"
    }
    strider location="zellij:strider"
    tab-bar location="zellij:bars" {
        role "tab-bar"
    }
    welcome-screen location="zellij:session-manager" {
        welcome_screen true
    }
}

// Plugins to load in the background when a new session starts
// eg. "file:/path/to/my-plugin.wasm"
// eg. "https://example.com/my-plugin.wasm"
load_plugins {
    zellij:bars {
        role "link"
    }
}
web_client {
    font "monospace"
}
 
// Use a simplified UI without special fonts (arrow glyphs)
// Options:
//   - true
//   - false (Default)
// 
// simplified_ui true
 
// Enable OSC8 hyperlink output
// Options:
//   - true (Default)
//   - false
// 
// osc8_hyperlinks true
 
// Choose the theme that is specified in the themes section.
// Default: default
// 
// theme "dracula"
 
// Theme to use when the host terminal reports a dark color palette.
// Requires `theme_light` to also be set; otherwise `theme` is used.
// 
// theme_dark "dracula"
 
// Theme to use when the host terminal reports a light color palette.
// Requires `theme_dark` to also be set; otherwise `theme` is used.
// 
// theme_light "solarized-light"
 
// Pin the session to a dark or light appearance, ignoring what the
// host terminal reports. When unset, the host terminal decides.
// Options: dark, light
// 
// explicit_theme_hue "dark"
 
// Choose the base input mode of zellij.
// Default: normal
// 
// default_mode "locked"
 
// Choose the path to the default shell that zellij will use for opening new panes
// Default: $SHELL
// 
// default_shell "fish"
 
// Choose the path to override cwd that zellij will use for opening new panes
// 
// default_cwd "/tmp"
 
// The name of the default layout to load on startup
// Default: "default"
// 
// default_layout "compact"
 
// The folder in which Zellij will look for layouts
// (Requires restart)
// 
// layout_dir "/tmp"
 
// The folder in which Zellij will look for themes
// (Requires restart)
// 
// theme_dir "/tmp"
 
// The folder in which Zellij will look for keybinding presets
// 
// keybinds_dir "/tmp"
 
// Toggle enabling the mouse mode.
// On certain configurations, or terminals this could
// potentially interfere with copying text.
// Options:
//   - true (default)
//   - false
// 
// mouse_mode false
 
// Toggle having pane frames around the panes
// Options:
//   - true (default, enabled)
//   - false
// 
// pane_frames false
 
// Set the pane frame style when pane_frames is enabled
// Options:
//   - full
//   - titles (default)
// 
// pane_frame_style "titles"
 
// When attaching to an existing session with other users,
// should the session be mirrored (true)
// or should each user have their own cursor (false)
// (Requires restart)
// Default: false
// 
// mirror_session true
 
// Choose what to do when zellij receives SIGTERM, SIGINT, SIGQUIT or SIGHUP
// eg. when terminal window with an active zellij session is closed
// (Requires restart)
// Options:
//   - detach (Default)
//   - quit
// 
// on_force_close "quit"
 
// Configure the scroll back buffer size
// This is the number of lines zellij stores for each pane in the scroll back
// buffer. Excess number of lines are discarded in a FIFO fashion.
// (Requires restart)
// Valid values: positive integers
// Default value: 10000
// 
// scroll_buffer_size 10000
 
// Provide a command to execute when copying text. The text will be piped to
// the stdin of the program to perform the copy. This can be used with
// terminal emulators which do not support the OSC 52 ANSI control sequence
// that will be used by default if this option is not set.
// Examples:
//
// copy_command "xclip -selection clipboard" // x11
// copy_command "wl-copy"                    // wayland
// copy_command "pbcopy"                     // osx
// 
// copy_command "pbcopy"
 
// Choose the destination for copied text
// Allows using the primary selection buffer (on x11/wayland) instead of the system clipboard.
// Does not apply when using copy_command.
// Options:
//   - system (default)
//   - primary
// 
// copy_clipboard "primary"
 
// Enable automatic copying (and clearing) of selection when releasing mouse
// Default: true
// 
// copy_on_select true
 
// Path to the default editor to use to edit pane scrollbuffer
// Default: $EDITOR or $VISUAL
// scrollback_editor "/usr/bin/vim"
 
// A fixed name to always give the Zellij session.
// Consider also setting `attach_to_session true,`
// otherwise this will error if such a session exists.
// Default: <RANDOM>
// 
// session_name "My singleton session"
 
// When `session_name` is provided, attaches to that session
// if it is already running or creates it otherwise.
// Default: false
// 
// attach_to_session true
 
// Toggle between having Zellij lay out panes according to a predefined set of layouts whenever possible
// Options:
//   - true (default)
//   - false
// 
// auto_layout false
 
// Whether sessions should be serialized to the cache folder (including their tabs/panes, cwds and running commands) so that they can later be resurrected
// Options:
//   - true (default)
//   - false
// 
// session_serialization false
 
// Whether pane viewports are serialized along with the session, default is false
// Options:
//   - true
//   - false (default)
// 
// serialize_pane_viewport false
 
// Scrollback lines to serialize along with the pane viewport when serializing sessions, 0
// defaults to the scrollback size. If this number is higher than the scrollback size, it will
// also default to the scrollback size. This does nothing if `serialize_pane_viewport` is not true.
// 
// scrollback_lines_to_serialize 10000
 
// Enable or disable the rendering of styled and colored underlines (undercurl).
// May need to be disabled for certain unsupported terminals
// (Requires restart)
// Default: true
// 
// styled_underlines false
 
// How often in seconds sessions are serialized
// 
// serialization_interval 10000
 
// Enable or disable writing of session metadata to disk (if disabled, other sessions might not know
// metadata info on this session)
// (Requires restart)
// Default: false
// 
// disable_session_metadata false
 
// Enable or disable support for the enhanced Kitty Keyboard Protocol (the host terminal must also support it)
// (Requires restart)
// Default: true (if the host terminal supports it)
// 
// support_kitty_keyboard_protocol false
 
// Enable or disable support for the Kitty Graphics Protocol, used to display images (the host terminal must also support it)
// (Requires restart)
// Default: true (if the host terminal supports it)
// 
// support_kitty_graphics_protocol false
// Whether to make sure a local web server is running when a new Zellij session starts.
// This web server will allow creating new sessions and attaching to existing ones that have
// opted in to being shared in the browser.
// When enabled, navigate to http://127.0.0.1:8082
// (Requires restart)
// 
// Note: a local web server can still be manually started from within a Zellij session or from the CLI.
// If this is not desired, one can use a version of Zellij compiled without
// `web_server_capability`
// 
// Possible values:
// - true
// - false
// Default: false
// 
// web_server false
// Whether to allow sessions started in the terminal to be shared through a local web server, assuming one is
// running (see the `web_server` option for more details).
// (Requires restart)
// 
// Note: This is an administrative separation and not intended as a security measure.
// 
// Possible values:
// - "on" (allow web sharing through the local web server if it
// is online)
// - "off" (do not allow web sharing unless sessions explicitly opt-in to it)
// - "disabled" (do not allow web sharing and do not permit sessions started in the terminal to opt-in to it)
// Default: "off"
// 
// web_sharing "off"
// A path to a certificate file to be used when setting up the web client to serve the
// connection over HTTPs
// 
// web_server_cert "/path/to/cert.pem"
// A path to a key file to be used when setting up the web client to serve the
// connection over HTTPs
// 
// web_server_key "/path/to/key.pem"
/// Whether to enforce https connections to the web server when it is bound to localhost
/// (127.0.0.0/8)
///
/// Note: https is ALWAYS enforced when bound to non-local interfaces
///
/// Default: false
// 
// enforce_https_for_localhost false
 
// Whether to stack panes when resizing beyond a certain size
// Default: true
// 
// stacked_resize false
 
// Whether stacked panes display as a list with the expanded pane pinned to the bottom
// Default: true
// 
// stacked_pane_list false
 
// Whether to show tips on startup
// Default: true
// 
// show_startup_tips false
 
// Whether to show release notes on first version run
// Default: true
// 
// show_release_notes false
 
// Whether to enable mouse hover effects and pane grouping functionality
// default is true
// advanced_mouse_actions false
 
// Whether Ctrl+ScrollWheel resizes panes
// default is true
// mouse_scroll_resize false
 
// Whether scrolling a pane implicitly enters and exits Scroll mode
// default is true
// scroll_mode_sync false
 
// Whether to enable mouse hover visual effects (frame highlight and help text)
// default is true
// mouse_hover_effects false
 
// Whether to show mouse hover help-text tips (resize help and group shortcuts)
// default is true
// mouse_hover_tips false
 
// Whether to show visual bell indicators (pane/tab frame flash and [!] suffix)
// default is true
// visual_bell true
 
// Whether to show a confirmation prompt before quitting (e.g. with Ctrl+q / the Quit action)
// Quitting exits the current client from the session; the session ends when the last client quits
// default is true
// confirm_quit true
 
// Whether to focus panes on mouse hover
// default is false
// focus_follows_mouse false
 
// Whether clicking a pane to focus it also sends the click into the pane
// default is false
// mouse_click_through false
 
// Whether a right click opens the right-click menu (when off, right clicks go to the focused pane only)
// An empty context_menu block opens no menu but keeps this on
// default is true
// context_menu_enabled false
 
// Whether triple-clicking inside command output marked by the shell (OSC 133) selects
// the command and its output instead of the logical line
// default is true
// osc133_command_selection false
 
// Characters that terminate a word when double-clicking to select it
// whitespace is always a separator and need not be listed here
// default is "[]{}<>()"
// word_separators "[]{}<>()"
 
// The ip address the web server should listen on when it starts
// Default: "127.0.0.1"
// (Requires restart)
// web_server_ip "127.0.0.1"
 
// The port the web server should listen on when it starts
// Default: 8082
// (Requires restart)
// web_server_port 8082
 
// A command to run (will be wrapped with sh -c and provided the RESURRECT_COMMAND env variable) 
// after Zellij attempts to discover a command inside a pane when resurrecting sessions, the STDOUT
// of this command will be used instead of the discovered RESURRECT_COMMAND
// can be useful for removing wrappers around commands
// Note: be sure to escape backslashes and similar characters properly
// post_command_discovery_hook "echo $RESURRECT_COMMAND | sed <your_regex_here>"

// Number of async worker tasks to spawn per active client.
//
// Allocating few tasks may result in resource contention and lags. Small values (around 4) should
// typically work best. Set to 0 to use the number of (physical) CPU cores.
// Note: This only applies to web clients at the moment.
// client_async_worker_tasks 4
 
// Whether to let programs running inside panes read the paste buffer
// (clipboard) with the OSC 52 escape sequence. When enabled, any program
// in any pane - including one running on a remote machine over SSH - can
// read the clipboard without the user being asked.
// Default: false
// dangerously_enable_paste_buffer_read false
 
// How to handle a nested Zellij session detected inside a pane.
// Options:
//   - "ask" (Default — prompt with a modal)
//   - "fullscreen" (always zoom into the nested session)
//   - "descend" (always control the nested session on focus)
//   - "never" (never prompt or descend; do it manually)
// 
// nested_session_handling "ask"
 
// Which escape sequence desktop notifications coming from panes are
// forwarded to the host terminal with.
// Options:
//   - "auto" (Default — detect from the host terminal environment)
//   - "osc9" (the legacy iTerm2 protocol, understood by most terminals)
//   - "osc99" (kitty's notification protocol)
//   - "bell" (ring the terminal bell instead)
//   - "off" (do not forward notifications to the host terminal)
// 
// host_notification_protocol "auto"
