zellij-utils/src/kdl/snapshots/zellij_utils__kdl__config_options_to_string.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: fake_document.to_string()
---
simplified_ui true
theme "dracula"
default_mode "locked"
default_shell "fish"
default_cwd "/tmp/foo"
default_layout "compact"
layout_dir "/tmp/layouts"
theme_dir "/tmp/themes"
mouse_mode false
pane_frames false
mirror_session true
on_force_close "quit"
scroll_buffer_size 100
copy_command "pbcopy"
copy_clipboard "system"
copy_on_select false
scrollback_editor "vim"
session_name "my_cool_session"
attach_to_session false
auto_layout false
session_serialization true
serialize_pane_viewport false
scrollback_lines_to_serialize 1000
styled_underlines false
serialization_interval 1
disable_session_metadata true
support_kitty_keyboard_protocol false
web_server true
web_sharing "disabled"
mouse_scroll_lines 5
mobile_layout "always"
mobile_threshold_cols 72
mobile_threshold_rows 0

