zellij-utils/src/kdl/snapshots/zellij_utils__kdl__config_options_to_string_with_some_options.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 4211
expression: fake_document.to_string()
---
default_layout "compact"

