zellij-utils/src/kdl/snapshots/zellij_utils__kdl__config_options_to_string_without_options.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 4196
expression: fake_document.to_string()
---

