zellij-utils/src/kdl/snapshots/zellij_utils__kdl__env_vars_to_string.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 3981
expression: serialized.to_string()
---
env {
    bar "foo"
    baz "true"
    foo "bar"
    thing "1"
}
