zellij-utils/src/kdl/snapshots/zellij_utils__kdl__keybinds_to_string.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 2558
expression: serialized.to_string()
---
keybinds clear-defaults=true {
    normal {
        bind "Ctrl g" { SwitchToMode "locked"; }
    }
}

