zellij-utils/src/kdl/snapshots/zellij_utils__kdl__keybinds_to_string_with_multiple_actions.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 2576
expression: serialized.to_string()
---
keybinds clear-defaults=true {
    normal {
        bind "Ctrl n" { NewPane; SwitchToMode "locked"; }
    }
}

