zellij-utils/src/kdl/snapshots/zellij_utils__kdl__keybinds_to_string_without_clearing_defaults.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 2575
expression: serialized.to_string()
---
keybinds {
    normal {
        bind "Ctrl g" { SwitchToMode "locked"; }
    }
}

