zellij-utils/src/kdl/snapshots/zellij_utils__kdl__macros_to_string_basic.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: serialized.to_string()
---
macros {
    test_macro {
        NewTab
        FocusNextPane
    }
}
